--- a/index/index.html
+++ b/index/index.html
@@ -13,9 +13,9 @@
     </head>
     <body onload="todaysDate()">
         <h1>DRUHA STRANKA</h1>
-        <component-one></component-one>
+        <menu-component></menu-component>
       
-        <component-three></component-three>
+        <meniny-komponent></meniny-komponent>
         
         <script src="../demos/breadcrumbs/js.js"></script>
         <script src="../demos/visit_counter/js.js"></script>
